# RAG-chatbot

./: .gitignore  README.md  main.py  migrate_to_cloud.py  pyproject.toml  requirements.txt  typescript
scripts/: run_local.sh
src/api/: api.py
src/rag_bot/: api.py  chat_cli.py  config.py  model.py  utils.py
src/rag_bot/indexing/: chunker.py  embeddings.py
src/rag_bot/loaders/: pdf_loader.py  registry.py
src/rag_bot/retrieval/: knowledge_retriever.py
