[project]
name="rag-bot"
version="0.1.0"
description="A RAG bot project"
requires-python=">=3.12"
dependencies = [
    "fastapi==0.128.7",
    "uvicorn==0.34.3",
    "starlette==0.49.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "chromadb==1.5.7",
    "cohere==5.13.11",
]


[tool.pytest.ini_options]
pythonpath=["src"]
testpaths=["tests"]